# voxelands

./: Cargo.toml  TODO
assets/shaders/: chunk.wgsl
src/: debug.rs  main.rs
src/data/: constants.rs  mod.rs  voxel_face.rs  voxel_type.rs
src/game/: camera.rs  mod.rs
src/game/world/: data.rs  generation_plugin.rs  loading_plugin.rs  meshing_plugin.rs  mod.rs  world_plugin.rs
src/plugin/: camera.rs  debug.rs  mod.rs  world.rs  world_worker.rs
src/plugin/world/: components.rs  events.rs  mod.rs  systems.rs  worker.rs
src/rendering/: chunk_material.rs  mod.rs
src/world/: chunk.rs  meshing.rs  mod.rs  voxel_map.rs  world.rs
