[package]
name = "voxelands"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
egui = "0.20.1"
futures-lite = "1.12.0"
itertools = "0.10.5"
rand = "0.8.5"
